kubernetes/apps/observability/kromgo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo
  namespace: observability
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
      group: external
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - kromgo.unscfleet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kromgo
          port: 80
          weight: 1
